force-v4s/main/default/objects/Volunteer_Hours__c/Volunteer_Hours__c.object-meta.xml
<CustomObject>
    <label>Volunteer Hours</label>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <nameField>
        <label>HoursID</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>