force-v4s/main/default/objects/Volunteer_Hours__c/fields/Clock_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_In_Time__c</fullName>
    <description>The time stamp a volunteer begins their work</description>
    <label>Clock In Time</label>
    <type>DateTime</type>
</CustomField>