force-v4s/main/default/objects/Volunteer_Hours__c/fields/Clock_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out_Time__c</fullName>
    <description>The time stamp a volunteer ends their work</description>
    <label>Clock Out Time</label>
    <type>DateTime</type>
</CustomField>