force-v4s/main/default/objects/Volunteer_Hours__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Contact__r.LastName  &amp; ", " &amp;  Contact__r.FirstName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>