force-v4s/main/default/objects/Volunteer_Hours__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>