force-v4s/main/default/objects/Volunteer_Hours__c/fields/Planned_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date_Time__c</fullName>
    <inlineHelpText>The actual date &amp; time the volunteer is planning on starting.</inlineHelpText>
    <label>Planned Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>