force-v4s/main/default/objects/Volunteer_Hours__c/fields/Shift_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start_Date_Time__c</fullName>
    <formula>Volunteer_Shift__r.Start_Date_Time__c</formula>
    <label>Shift Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>