force-v4s/main/default/objects/Volunteer_Hours__c/fields/System_Note__c.field-meta.xml
<CustomField>
    <fullName>System_Note__c</fullName>
    <inlineHelpText>Text information from the system scheduler.</inlineHelpText>
    <label>System Note</label>
    <type>TextArea</type>
</CustomField>