force-v4s/main/default/objects/Volunteer_Hours__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, "Completed"), Hours_Worked__c *  Number_of_Volunteers__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>