force-v4s/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Campaign__c</fullName>
    <formula>Volunteer_Job__r.Campaign__c</formula>
    <label>Volunteer Campaign</label>
    <type>Text</type>
</CustomField>