force-v4s/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Campaign_Name__c</fullName>
    <formula>Volunteer_Job__r.Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Campaign Name</label>
    <type>Text</type>
</CustomField>