force-v4s/main/default/objects/Volunteer_Hours__c/fields/Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job__c</fullName>
    <label>Volunteer Job</label>
    <referenceTo>Volunteer_Job__c</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>