force-v4s/main/default/objects/Volunteer_Hours__c/validationRules/HoursRequiredOnCompletion.validationRule-meta.xml
<ValidationRule>
    <fullName>HoursRequiredOnCompletion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &#39;Completed&#39;) , ISNULL( Hours_Worked__c ))</errorConditionFormula>
    <errorDisplayField>Hours_Worked__c</errorDisplayField>
    <errorMessage>Please specify the Hours Worked when setting Status to Completed.</errorMessage>
</ValidationRule>