force-v4s/main/default/objects/Volunteer_Hours__c/validationRules/StatusMustBeSet.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusMustBeSet</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,"" )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please specify a Status value.</errorMessage>
</ValidationRule>