force-v4s/main/default/objects/Volunteer_Hours__c/listViews/Clocked_In_Users.listView-meta.xml
<ListView>
    <fullName>Clocked_In_Users</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Clock_In_Time__c</columns>
    <columns>Volunteer_Job__c</columns>
    <columns>Volunteer_Shift__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clock_In_Time__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Clocked In Users</label>
</ListView>